# Archiplayer

./: .gitignore  CONTRIBUTING.md  ID_Archiplayer.af  ID_Archiplayer.af~lock~  ID_Archiplayer2.af~lock~  LICENSE  README.md  RELEASE.md  build-env.ps1  package-lock.json  package.json
.agents/: HANDOFF.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pages.yml  release.yml  verify.yml
docs/: styling.md
docs/prd/: cross-platform-build-instructions.md
scripts/: build-windows.ps1  release.ps1  verify-release-version.mjs
site/: index.html  site.js  styles.css
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  downloads.rs  lib.rs  main.rs  wfmu.rs
src-tauri/tests/: live_smoke.rs
src-tauri/tests/fixtures/: channel_landing_drummer_auto.json  channel_landing_drummer_live.json  playlist_166195.html  playlists_index.html  show_BK.html  show_BK2001.html  show_WA.html
src/lib/: CatalogNav.svelte  Icon.svelte  ThemePicker.svelte  Toast.svelte  TrackRow.svelte  api.ts  episode-scroll.ts  playback-transition.ts  player.svelte.ts  random-show.ts  request-gate.ts  share.ts  theme.svelte.ts  toaster.svelte.ts  track-playback.ts  volume.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/downloads/: +page.svelte
src/routes/live/[id]/: +page.svelte
src/routes/profile/: +page.svelte
src/routes/show/[id]/: +page.svelte
tests/: episode-scroll.test.mjs  frontend-guards.test.mjs  playback-transition.test.mjs  random-show.test.mjs  track-playback.test.mjs
