[package]
name = "archivebunker2"
version = "0.1.0"
description = "WFMU Archive Bunker 2 - local-first archive browser and player"
authors = ["archivebunker2"]
edition = "2021"

[lib]
name = "archivebunker2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream"] }
scraper = "0.20"
regex = "1"
csv = "1"
tokio = { version = "1", features = ["sync", "time", "fs", "io-util"] }
futures-util = "0.3"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
